@@ -74,7 +74,7 @@
 
 <xi:include href="rndesktop.xml"/>
 <xi:include href="rncontrolcenter.xml"/>
-
+<xi:include href="rna11y.xml"/>
   </sect1>
   <sect1 id="rnapplications">
     <title>Applications</title>
